== 0.1.1 - 3-Mar-2006

=== General

* 3-Mar-2006 Paul DuBois.
  README: Added URLs for the RubyForge DBI project.

=== MySQL

* 11-Apr-2006 Paul DuBois.
  Mysql.rb. Renamed column info attributes/methods: 
  _type, _length, _max_length, _flags are now
  mysql_type, mysql_length, mysql_max_length, mysql_flags
* 05-Apr-2006 Paul DuBois.
  Mysql.rb. Modify column_info method to support standard column
  attributes: nullable, primary, unique, indexed
  Modify column_info method to support MySQL-specific column
  attributes: _type, _length, _max_length, _flags
* 27-Mar-2006 Paul DuBois.
  Mysql.rb. Test for sqlstate method using respond_to? rather than by
  raising an exception.
  Implement mysql_compression={0|1} option in DSN to disable/enable
  compression of client/server protocol. (Default off.)
  Implement mysql_client_found_rows={0|1} option in DSN to cause
  server to return rows-changed counts (0) or rows-matched counts (1)
  for statements that modify rows (mostly relevant for UPDATE).  (Default
  is rows-changed counts)
  Bugfix: column_info calculated precision as col.length - col.decimals.
  Should be col.length (precision is not just the digits to left of
  decimal point).
* 4-Mar-2006 Paul DuBois.
  Mysql.rb: Added state member value to DBI::DatabaseError exceptions for
  MySQL.  If mysql-ruby doesn't define a sqlstate method that provides the
  SQLSTATE value, state is set to nil (which is the default value anyway).
* 3-Mar-2006 Paul DuBois.
  Mysql.rb: Enabled use of mysql_read_default_file and
  mysql_read_default_group options in DSN for MySQL. These options
  enable option files to be read.  This change addresses bug #1951.

== 0.1.0 - 16-Feb-2006
* Project taken over by Kirk Haines, Francis Hwang, Patrick May and Daniel
  Berger as of January, 2006 (with the permission of Michael Neumann).
* Changelog style changed from diff style to summary style.  If you want diffs,
  you can watch the CVS commits at