@@ -7,21 +7,27 @@
 
 === MySQL
 
+* 02-Aug-2006 Paul DuBois.
+  Mysql.rb. Modified column_info method to support standard sql_type and
+  type_name column attributes and MySQL-specific mysql_type_name
+  attribute.
+  MYSQL_to_XOPEN hash: Added LONGTEXT and BIT members, corrected length
+  for BLOB and MEDIUMBLOB members.
 * 11-Apr-2006 Paul DuBois.
   Mysql.rb. Renamed column info attributes/methods: 
   _type, _length, _max_length, _flags are now
   mysql_type, mysql_length, mysql_max_length, mysql_flags
 * 05-Apr-2006 Paul DuBois.
-  Mysql.rb. Modify column_info method to support standard column
+  Mysql.rb. Modified column_info method to support standard column
   attributes: nullable, primary, unique, indexed
   Modify column_info method to support MySQL-specific column
   attributes: _type, _length, _max_length, _flags
 * 27-Mar-2006 Paul DuBois.
   Mysql.rb. Test for sqlstate method using respond_to? rather than by
   raising an exception.
-  Implement mysql_compression={0|1} option in DSN to disable/enable
+  Implemented mysql_compression={0|1} option in DSN to disable/enable
   compression of client/server protocol. (Default off.)
-  Implement mysql_client_found_rows={0|1} option in DSN to cause
+  Implemented mysql_client_found_rows={0|1} option in DSN to cause
   server to return rows-changed counts (0) or rows-matched counts (1)
   for statements that modify rows (mostly relevant for UPDATE).  (Default
   is rows-changed counts)
